# Ready4VPR

./: .coverage  .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  coverage.txt  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt
config/: celery_config.py  settings.py  urls.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1df033120bbcc412___init___py.html  z_1df033120bbcc412_create_moderator_py.html  z_1df033120bbcc412_create_superuser_py.html  z_1df033120bbcc412_create_test_data_py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_300a7f43993f905c_0001_initial_py.html  z_300a7f43993f905c_0002_lesson_owner_py.html  z_300a7f43993f905c_0003_course_owner_py.html  z_300a7f43993f905c_0004_coursesubscription_py.html  z_300a7f43993f905c_0005_remove_coursesubscription_is_active_py.html  z_300a7f43993f905c___init___py.html  z_8b562f3fe71efc7d___init___py.html  z_e7c45762ecaa8ffb___init___py.html  z_e7c45762ecaa8ffb_admin_py.html  z_e7c45762ecaa8ffb_apps_py.html  z_e7c45762ecaa8ffb_models_py.html  z_e7c45762ecaa8ffb_paginators_py.html  z_e7c45762ecaa8ffb_serializers_py.html  z_e7c45762ecaa8ffb_tests_py.html  z_e7c45762ecaa8ffb_urls_py.html  z_e7c45762ecaa8ffb_validators_py.html  z_e7c45762ecaa8ffb_views_py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tests_py.html  (+6 more)
(+40 files in other folders)
